grayScale Heatmap completed

--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <title>GreayScale HeatMap</title>
+    <title>GrayScale HeatMap</title>
 </head>
 <body>
-    
-    
+    <div class="container">
+        <header></header>
+        <nav></nav>
+        <main>
+            <section>
+                <header>
+                    <div class="imageDiv"></div>
+                    <h1></h1>
+                </header>
+                <p class="mainContent"></p>
+            </section>
+            <aside></aside>
+        </main>
+    </div>
+
 </body>
 </html>
