added text in the heatmap

--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <title>GrayScale HeatMap</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <header></header>
-        <nav></nav>
-        <main>
-            <section>
-                <header>
-                    <div class="imageDiv"></div>
-                    <h1></h1>
-                </header>
-                <p class="mainContent"></p>
-            </section>
-            <aside></aside>
-        </main>
+      <header></header>
+      <nav></nav>
+      <main>
+        <section>
+          <header>
+            <div class="imageDiv"></div>
+            <h1>
+              When CSS Isn’t Enough: JavaScript Requirements For Accessible
+              Components
+            </h1>
+          </header>
+          <p class="mainContent">
+            Spoiler alert: tooltips, modals, tabs, carousels, and dropdown menus
+            are some of the user interface components that require more than
+            CSS. To ensure accessibility of your interface, JavaScript is a
+            necessary addition to accomplish focus management, respond to
+            keyboard events, and toggle ARIA attributes.
+          </p>
+        </section>
+        <aside></aside>
+      </main>
     </div>
-
-</body>
+  </body>
 </html>
